...
    },
    [],
  );

  return (
    <View
      testID="screen-dashboard"
      style={[styles.container, { backgroundColor: theme.backgroundRoot }]}
    >
      <ScrollView
        testID="dashboard.scroll"
        stickyHeaderIndices={[0]}
        scrollEventThrottle={16}
...
