...
      setPin((prev) => prev.slice(0, -1));
    }
  }, [isProcessing]);

  return (
    <View
      testID="screen-lock"
      style={[
        styles.container,
        {
          backgroundColor: colors.backgroundRoot,
          paddingTop: insets.top + Spacing["3xl"],
        },
...
