...
                          color: selected
                            ? theme.buttonText
                            : theme.text,
                        },
                      ]}
                    >
                      {val === "open" ? "Open" : "Closed"}
                    </ThemedText>
                  </Pressable>
                );
              })}
            </View>
          </View>
...
